# QuizApp

./: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  prod.Dockerfile  pyproject.toml  test.Dockerfile
.github/workflows/: deploy.yml
app/: config.py  main.py
app/core/commands/: delete_user.py  edit_email.py  edit_full_name.py  edit_password.py  errors.py  sign_in.py  sign_in_by_oauth.py  sign_up.py
app/core/common/: access_service.py  base_error.py  export_data.py
app/core/entities/: company.py  errors.py  invitation.py  notification.py  quiz.py  user.py  value_objects.py
app/core/interfaces/: cache.py  company_gateways.py  id_provider.py  invitation_gateways.py  notification_gateways.py  password_hasher.py  quiz_gateways.py  upload_file.py  user_gateways.py
app/core/queries/: get_me.py  get_user.py  get_users.py
app/infrastructure/auth/: access_token_processor.py  id_provider.py  password_hasher.py
app/infrastructure/bootstrap/: configs.py  di.py
app/infrastructure/cache/: cache.py  config.py  provider.py
app/infrastructure/files/: upload_file.py
app/infrastructure/gateways/: company.py  invite.py  notification.py  quiz.py  user.py
app/infrastructure/jwt/: config.py  jwt_processor.py
app/infrastructure/persistence/: commiter.py  config.py  provider.py
app/infrastructure/tasks/: __init__.py  check_available_quiz.py
app/routers/: __init__.py  company.py  exceptions.py  healthcheck.py  invite.py  notification.py  quiz.py  setup.py  user.py
app/routers/auth/: config.py  token_auth.py
app/routers/responses/: base.py  orjson.py
app/schemas/: company.py  healthckech.py  invite.py  quiz.py  user.py
app/utils/: get_cache_key.py
src/quiz_app/: main.py
tests/: conftest.py
tests/commands/: conftest.py  test_delete_user.py  test_edit_email.py  test_edit_full_name.py  test_edit_password.py  test_sign_in.py  test_sign_in_by_oauth.py  test_sign_up.py
tests/commands/company/: test_create_company.py  test_delete_company.py  test_edit_company_description.py  test_edit_company_name.py  test_edit_company_visibility.py  test_edit_member_role.py  test_edit_name.py  test_leave_from_company.py  test_remove_user_from_company.py
tests/commands/invitation/: test_accept_invitation.py  test_accept_user_request.py  test_reject_invitation.py  test_reject_user_request.py  test_send_invitation_to_user.py  test_send_request_from_user.py
tests/commands/notification/: test_mark_read_notification.py
tests/commands/quiz/: test_create_quiz.py  test_delete_quiz.py  (+3 more)
tests/entities/: test_value_objects.py
tests/mocks/: cache.py  commiter.py  company_gateways.py  id_provider.py  invitation_gateways.py  notification_gateway.py  quiz_gateways.py  user_gateways.py
tests/queries/: conftest.py  test_get_me.py  test_get_user.py  test_get_users.py
tests/routers/: conftest.py  test_healthcheck.py
(+81 files in other folders)
