[tool.poetry]
name = "quizapp"
version = "0.1.0"
description = "Application for internship at meduzzen"
authors = ["Andrii <andryxakulishow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
environs = "^11.0.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
dishka = "^1.4.0"
greenlet = "^3.1.1"
redis = "^5.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"